# latex-zutil

./: .explcheckrc  .gitattributes  .gitignore  .ignore  .justfile  .pre-commit-config.yaml  README.md  _typos.toml  build.lua  justfile  mise.ci.toml  mise.toml  pyproject.toml  ruff.toml
.github/: dependabot.yml  tl_packages
.github/workflows/: check.yml  lint.yml  schedule.yml
config/: explcheck.toml  typos.toml
explcheck-wrapper/: pyproject.toml
explcheck-wrapper/src/explcheck_wrapper/: __init__.py  explcheck_wrapper.py
l3build-wrapper/: l3build-wrapper.py  l3build_wrapper.py  pyproject.toml
l3build-wrapper/src/l3build_wrapper/: __init__.py  l3build_wrapper.py
scripts/: explcheck-toggle-configs.lua  l3build-wrapper.py  l3build.py  lint-expl3.sh  lintexpl3.py
support/: TEMPLATE-tblr-test.lvt  TEMPLATE-zutil-test.lvt  build-normalize-log.lua  regression-test.cfg  zutil-regression-test.cfg
tabularray/: CONTRIBUTING.md  README.md  build.lua  config-old.lua  tabularray.sty
tabularray/doc/: CHANGELOG.md
tabularray/testfiles/: tblr-cell-text.lvt  tblr-cell-text.tlg  tblr-hvline.lvt  tblr-hvline.tlg  tblr-loading.lvt  tblr-loading.tlg  tblr-options.lvt  tblr-options.tlg  tblr-split.lvt  tblr-split.tlg  tblr-variables.lvt  tblr-variables.tlg  tblr-zutil-debug.lvt  tblr-zutil-debug.tlg
tabularray/testfiles-old/: extra-002.tlg  table-004.tex  table-004.tlg  verb-001.md5
zutil/: README.md  build.lua  zutil-debug.code.tex  zutil-l3extras.code.tex  zutil-l3patch.code.tex  zutil-regression-test.tex  zutil-softerror.code.tex  zutil-unravel.code.tex  zutil.sty
zutil/testfiles/: zutil-001.lvt  zutil-001.tlg  zutil-debug.lvt  zutil-debug.tlg  zutil-l3extras.lvt  zutil-l3extras.tlg  zutil-l3patch.lvt  zutil-l3patch.tlg  zutil-mdfive.lvt  zutil-mdfive.tlg  zutil-rgtest-mdfive.lvt  zutil-rgtest-mdfive.tlg  zutil-rgtest.luatex.tlg  zutil-rgtest.lvt  zutil-rgtest.tlg  zutil-softerror.luatex.tlg  zutil-softerror.lvt  zutil-softerror.tlg  zutil-unravel.lvt  zutil-unravel.tlg
