[project]
name = "explcheck-wrapper"
version = "0.1.0"
description = "explcheck wrapper with extra convenient CLI options"
authors = [
    { name = "Yukai Chou", email = "muzimuzhi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6,<0.5.0",
    "tomlkit>=0.14.0,<0.15.0",
]

[project.scripts]
explcheck-wrapper = "explcheck_wrapper:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
