[project]
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "l3build-wrapper"
version = "0.1.0"
description = "Check and save selective l3build tests made easier"

dependencies = []

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
l3build-wrapper = "l3build_wrapper:main"
